DAY40 Need to revisit

--- a/DAY40/.env
+++ b/DAY40/.env
@@ -7,3 +7,8 @@ TWILIO_AUTH_TOKEN="______YOUR_TWILIO_VIRTUAL_NUMBER_____"
 TWILIO_VIRTUAL_NUMBER="______YOUR_TWILIO_VIRTUAL_NUMBER_____"
 TWILIO_VERIFIED_NUMBER="______+YOUR_TWILIO_VERIFIED_NUMBER_____"
 TWILIO_WHATSAPP_NUMBER="______+YOUR_TWILIO_WHATSAPP_NUMBER_____"
+SHEETY_PRICES_ENDPOINT=""
+SHEETY_USERS_ENDPOINT=""
+EMAIL_PROVIDER_SMTP_ADDRESS=""
+MY_EMAIL=""
+MY_EMAIL_PASSWORD=""
